--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,5 +1,6 @@
 @use './partials/variables' as *;
 @use './partials/mixins' as *;
+@use './partials/typography';
 
 *{
   margin: 0;
@@ -21,6 +22,11 @@ a{
 
     @include mobile{
       padding: 1rem;
+      width:100vw;
+      justify-content: center;
+      font-family: AvenirNextLTPro-Demi;
+      font-size: 16px;
+      line-height: 32px;
     }
 
     &__nav{
@@ -45,6 +51,11 @@ a{
       justify-content: center;
       align-items: center;
       gap:3rem;
+
+      @include mobile{
+        max-width: 320px;
+        gap:5rem;
+      }
     }
 
     &__item{
@@ -60,6 +71,7 @@ a{
 
       &:hover{
         color: $white;
+
       }
       &:active{
         color:$white;
@@ -71,34 +83,29 @@ a{
 
 .hero{
   position:relative;
-  // overflow: hidden;  
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: center;
-
-  &__img{
-    position:absolute;
-    height:70vw;
-    // opacity: 0.5;
-
-    @include mobile{
-      min-width:320px;
-      
-    }
-
-  }
+  height:12rem;   
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-image: url(../assets/images/hero-bio.jpg);
+  background-size: cover;
+  background-position: center;
+ 
 
   &__overlay{
     position:absolute;
     background-color: $bandsite-black;
-    
+    height:100%;
+    width:100%;
+    opacity: 0.5;
   }
 
  
-  &__header{
-    position:absolute;
+  &__header{  
     z-index: 1;
     font-family: AvenirNextLTPro-Bold;
+    color: $white;
+    padding: 16px;
   }
 }
 
