--- a/styles/bio.css
+++ b/styles/bio.css
@@ -21,38 +21,22 @@ a {
 }
 
 .header {
-  font-family: AvenirNextLTPro-Bold;
+  font-family: AvenirNextLTPro-Demi;
   background-color: #323232;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding: 1rem 3rem 1rem 3rem;
-}
-@media (min-width: 320px) {
-  .header {
-    padding: 1rem;
-    width: 100vw;
-    justify-content: center;
-    font-family: AvenirNextLTPro-Demi;
-    font-size: 16px;
-    line-height: 32px;
-  }
+  padding: 1rem;
+  height: 6rem;
+  width: 100vw;
+  font-size: 16px;
+  line-height: 16px;
 }
 .header__nav {
   display: flex;
   justify-content: flex-start;
-}
-@media (min-width: 320px) {
-  .header__nav {
-    max-width: 320px;
-    height: 5vw;
-  }
-}
-.header__logo {
-  max-height: 20px;
-  max-width: 120px;
 }
 .header__list {
   width: inherit;
@@ -60,13 +44,7 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
-}
-@media (min-width: 320px) {
-  .header__list {
-    max-width: 320px;
-    gap: 5rem;
-  }
+  gap: 5rem;
 }
 .header__item {
   list-style: none;
@@ -108,4 +86,39 @@ a {
   font-family: AvenirNextLTPro-Bold;
   color: #FFFFFF;
   padding: 16px;
+}
+
+@media (min-width: 768px) {
+  .gallery {
+    padding-left: 36px;
+  }
+}
+.gallery__header {
+  font-family: AvenirNextLTPro-Bold;
+  font-weight: 700;
+  padding: 24px 16px 16px 16px;
+}
+.gallery__imgcontainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+@media (min-width: 768px) {
+  .gallery__imgcontainer {
+    flex-direction: row;
+  }
+}
+.gallery__img {
+  width: 100%;
+  height: 12rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-bottom: 1rem;
+}
+@media (min-width: 768px) {
+  .gallery__img {
+    width: 15rem;
+    height: 10rem;
+  }
 }/*# sourceMappingURL=bio.css.map */
