--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -11,38 +11,25 @@ a{
   text-decoration: none;
 }
 .header{
-    font-family: AvenirNextLTPro-Bold;
+    font-family: AvenirNextLTPro-Demi;
     background-color:$bandsite-black;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items:center;
     flex-wrap: wrap;
-    padding: 1rem 3rem 1rem 3rem;
+    padding: 1rem;
+    height:6rem;
+    width: 100vw;
+    font-size: 16px;
+    line-height: 16px;
 
-    @include mobile{
-      padding: 1rem;
-      width:100vw;
-      justify-content: center;
-      font-family: AvenirNextLTPro-Demi;
-      font-size: 16px;
-      line-height: 32px;
-    }
-
+   
     &__nav{
       display: flex;
       justify-content: flex-start;
       
-      @include mobile{
-        max-width: 320px;
-        height: 5vw;
       }
-
-    }
-    &__logo{
-      max-height: 20px;
-      max-width: 120px;
-    }
 
     &__list{
       width: inherit;
@@ -50,12 +37,8 @@ a{
       display: flex;
       justify-content: center;
       align-items: center;
-      gap:3rem;
+      gap:5rem;
 
-      @include mobile{
-        max-width: 320px;
-        gap:5rem;
-      }
     }
 
     &__item{
@@ -108,6 +91,45 @@ a{
     padding: 16px;
   }
 }
+
+.gallery{
+    
+
+  @include tablet{
+    padding-left:36px;
+  }  
+
+  &__header{
+    font-family:  AvenirNextLTPro-Bold ;
+    font-weight: 700;
+    padding: 24px 16px 16px 16px;
+  }
+  &__imgcontainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+
+    @include tablet{
+      flex-direction: row;
+    }
+  }
+  &__img{
+    width:100%;
+    height:12rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    padding-bottom: 1rem;
+
+    @include tablet{
+      width: 15rem;
+      height: 10rem;
+      
+    }
+
+  }
+}
+
 
 
 
