--- a/styles/bio.css
+++ b/styles/bio.css
@@ -28,15 +28,34 @@ a {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding: 1rem;
   height: 6rem;
   width: 100vw;
   font-size: 16px;
   line-height: 16px;
 }
+@media (min-width: 768px) {
+  .header {
+    justify-content: flex-start;
+    padding-left: 36px;
+    padding-right: 36px;
+    gap: 3rem;
+  }
+}
+@media (min-width: 1280px) {
+  .header {
+    padding-left: 160px;
+  }
+}
 .header__nav {
   display: flex;
   justify-content: flex-start;
+  padding-bottom: 2rem;
+}
+@media (min-width: 768px) {
+  .header__nav {
+    height: 95%;
+    padding: 1px;
+  }
 }
 .header__list {
   width: inherit;
@@ -45,6 +64,16 @@ a {
   justify-content: center;
   align-items: center;
   gap: 5rem;
+}
+@media (min-width: 768px) {
+  .header__list {
+    gap: 3rem;
+  }
+}
+@media (min-width: 1280px) {
+  .header__list {
+    gap: 1.5rem;
+  }
 }
 .header__item {
   list-style: none;
@@ -74,6 +103,16 @@ a {
   background-size: cover;
   background-position: center;
 }
+@media (min-width: 768px) {
+  .hero {
+    height: 32rem;
+  }
+}
+@media (min-width: 1280px) {
+  .hero {
+    height: 48rem;
+  }
+}
 .hero__overlay {
   position: absolute;
   background-color: #323232;
@@ -86,8 +125,24 @@ a {
   font-family: AvenirNextLTPro-Bold;
   color: #FFFFFF;
   padding: 16px;
+  font-weight: 700;
+}
+@media (min-width: 768px) {
+  .hero__header {
+    font-size: 60px;
+    padding: 3rem;
+  }
+}
+@media (min-width: 1280px) {
+  .hero__header {
+    font-size: 60px;
+    padding: 8rem;
+  }
 }
 
+.gallery {
+  background-color: #FAFAFA;
+}
 @media (min-width: 768px) {
   .gallery {
     padding-left: 36px;
@@ -109,6 +164,11 @@ a {
     flex-direction: row;
   }
 }
+@media (min-width: 1280px) {
+  .gallery__imgcontainer {
+    flex-direction: row;
+  }
+}
 .gallery__img {
   width: 100%;
   height: 12rem;
@@ -117,6 +177,12 @@ a {
   padding-bottom: 1rem;
 }
 @media (min-width: 768px) {
+  .gallery__img {
+    width: 15rem;
+    height: 10rem;
+  }
+}
+@media (min-width: 1280px) {
   .gallery__img {
     width: 15rem;
     height: 10rem;
