--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -115,7 +115,7 @@ a{
   }
 
  
-  &__header{  
+  &__title{  
     z-index: 1;
     font-family: AvenirNextLTPro-Bold;
     color: $white;
@@ -133,6 +133,52 @@ a{
   }
 }
 
+.about{
+    &__title{
+      padding: 24px 16px 16px 16px;
+      font-family: AvenirNextLTPro-Bold ;
+      font-size: 24px;
+      line-height: 32px;
+      font-weight: 700;
+      color:$bandsite-black;
+    }
+    &__img{
+      padding-left: 16px;
+      padding-right: 16px;
+      padding-bottom: 16px;
+      width:100%;
+      height:12rem;
+    }
+    &__para{
+      padding-left: 16px;
+      padding-right: 16px;
+      padding-bottom: 1rem;
+      font-family:AvenirNextLTPro-Bold ;
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 20px;
+      font-style: bold;
+      color:$bandsite-black;
+    }
+}
+.beesarticle{
+    &__title{
+      font-family: AvenirNextLTPro-Demi;
+      font-size: 14px;
+      line-height: 22px;
+      font-weight: 600;
+      color:$bandsite-black;
+      padding: 16px;
+    }
+    &__para{
+      font-family: AvenirNextLTPro-Regular;
+      font-weight: 400;
+      font-size: 13px;
+      line-height: 18px;
+      padding: 0 16px 16px 16px;
+      color:$bandsite-black;
+    }
+}
 .gallery{
     background-color: $alabaster;
 
@@ -140,10 +186,10 @@ a{
     padding-left:36px;
   }  
 
-  &__header{
+  &__title{
     font-family:  AvenirNextLTPro-Bold ;
     font-weight: 700;
-    padding: 24px 16px 16px 16px;
+    padding: 8px 16px 16px 16px;
   }
   &__imgcontainer{
     display: flex;
@@ -179,7 +225,51 @@ a{
   }
 }
 
+.footer{
+  background-color: $bandsite-black;
+  margin-top: 8px;
+  &__title{
+    padding: 24px 16px 16px 16px;
+      font-family: AvenirNextLTPro-Bold ;
+      font-size: 24px;
+      line-height: 32px;
+      font-weight: 700;
+      color:$white;
+  }
+  &__imgcontainer{
+    display: flex;
+    gap:1rem;
+    padding-left: 16px;
+    padding-right: 16px;
 
-
-
-
+  }
+  &__parabold{
+    font-family: AvenirNextLTPro-Bold ;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 18px;
+    color:$white;
+    padding: 16px;    
+  }
+  &__para--contact{
+    @extend .footer__parabold;
+    font-family: AvenirNextLTPro-Regular;
+    padding:0 16px 0 16px;
+  }
+  &__para--email{
+    @extend .footer__para--contact;
+    padding: 16px;
+  }
+  &__logo{
+    padding: 16px;
+    // height:20px;
+    // width:120px; //check tomorrow
+  }
+  &__copyright{
+    font-family: AvenirNextLTPro-Regular;
+    font-size: 11px;
+    line-height: 18px;
+    color:$white;
+    padding: 16px;  
+  }
+}
