--- a/styles/bio.css
+++ b/styles/bio.css
@@ -14,6 +14,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 a {
@@ -24,17 +25,16 @@ a {
   font-family: AvenirNextLTPro-Demi;
   background-color: #323232;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   height: 6rem;
-  width: 100vw;
   font-size: 16px;
   line-height: 16px;
 }
 @media (min-width: 768px) {
   .header {
+    flex-direction: row;
     justify-content: flex-start;
     padding-left: 36px;
     padding-right: 36px;
@@ -43,13 +43,12 @@ a {
 }
 @media (min-width: 1280px) {
   .header {
-    padding-left: 160px;
+    padding-left: 80px;
   }
 }
 .header__nav {
   display: flex;
   justify-content: flex-start;
-  padding-bottom: 2rem;
 }
 @media (min-width: 768px) {
   .header__nav {
@@ -57,18 +56,19 @@ a {
     padding: 1px;
   }
 }
-.header__list {
-  width: inherit;
-  height: inherit;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 5rem;
+.header__logo {
+  align-self: center;
 }
-@media (min-width: 768px) {
-  .header__list {
-    gap: 3rem;
+@media (min-width: 1280px) {
+  .header__logo {
+    padding-left: 36px;
   }
+}
+.header__list {
+  width: 320px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 @media (min-width: 1280px) {
   .header__list {
@@ -78,19 +78,36 @@ a {
 .header__item {
   list-style: none;
   color: #FFFFFF;
+  height: 2rem;
+  width: 100%;
+  text-align: center;
+}
+.header__item:hover {
+  color: #FFFFFF;
+  border-bottom: 4px solid #FFFFFF;
+}
+.header__item:active {
+  color: #FFFFFF;
+  font-weight: bold;
+  border-bottom: 4px solid #FFFFFF;
+}
+@media (min-width: 768px) {
+  .header__item {
+    height: 5.5rem;
+    align-content: center;
+  }
 }
 .header__link {
   font-family: AvenirNextLTPro-Bold;
   color: #E1E1E1;
-  padding: 8px;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
 }
-.header__link:hover {
-  color: #FFFFFF;
-}
-.header__link:active {
-  color: #FFFFFF;
-  font-weight: bold;
-  border-bottom: 4px solid #FFFFFF;
+@media (min-width: 1280px) {
+  .header__link {
+    margin-right: 36px;
+    margin-left: 36px;
+  }
 }
 
 .hero {
@@ -147,13 +164,50 @@ a {
   line-height: 32px;
   font-weight: 700;
   color: #323232;
+  width: 100%;
+}
+@media (min-width: 768px) {
+  .about__title {
+    padding: 48px 36px 36px 36px;
+    font-family: AvenirNextLTPro-Bold;
+    font-size: 36px;
+    line-height: 44px;
+    font-weight: 700;
+    color: #323232;
+  }
+}
+@media (min-width: 1280px) {
+  .about__title {
+    padding: 48px 160px 36px 160px;
+    font-family: AvenirNextLTPro-Bold;
+    font-size: 36px;
+    line-height: 44px;
+    font-weight: 700;
+    color: #323232;
+  }
 }
 .about__img {
-  padding-left: 16px;
-  padding-right: 16px;
-  padding-bottom: 16px;
+  padding: 0 16px 16px 16px;
   width: 100%;
   height: 12rem;
+}
+@media (min-width: 768px) {
+  .about__img {
+    display: flex;
+    padding: 0 80px 36px 80px;
+    width: 95%;
+    height: 400px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1280px) {
+  .about__img {
+    display: flex;
+    padding: 0 80px 36px 80px;
+    margin: 0 auto;
+    width: 80%;
+    height: 580px;
+  }
 }
 .about__para {
   padding-left: 16px;
@@ -165,6 +219,60 @@ a {
   line-height: 20px;
   font-style: bold;
   color: #323232;
+  display: flex;
+}
+@media (min-width: 768px) {
+  .about__para {
+    display: flex;
+    margin: 0 auto;
+    padding: 0 80px 0 80px;
+    font-family: AvenirNextLTPro-Demi;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    font-style: bold;
+    color: #323232;
+    width: 95%;
+  }
+}
+@media (min-width: 1280px) {
+  .about__para {
+    display: flex;
+    margin: 0 auto;
+    padding: 0 80px 0 80px;
+    font-family: AvenirNextLTPro-Demi;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    color: #323232;
+    width: 80%;
+  }
+}
+@media (min-width: 768px) {
+  .about__para--modified {
+    display: flex;
+    margin: 0 auto;
+    padding: 16px 80px 36px 80px;
+    width: 95%;
+    font-family: AvenirNextLTPro-Demi;
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 22px;
+    color: #323232;
+  }
+}
+@media (min-width: 1280px) {
+  .about__para--modified {
+    display: flex;
+    margin: 0 auto;
+    padding: 16px 80px 36px 80px;
+    width: 80%;
+    font-family: AvenirNextLTPro-Demi;
+    font-size: 19px;
+    font-weight: 600;
+    line-height: 22px;
+    color: #323232;
+  }
 }
 
 .beesarticle__title {
@@ -187,15 +295,27 @@ a {
 .gallery {
   background-color: #FAFAFA;
 }
-@media (min-width: 768px) {
-  .gallery {
-    padding-left: 36px;
-  }
-}
 .gallery__title {
   font-family: AvenirNextLTPro-Bold;
   font-weight: 700;
   padding: 8px 16px 16px 16px;
+  color: #323232;
+}
+@media (min-width: 768px) {
+  .gallery__title {
+    font-family: AvenirNextLTPro-Bold;
+    padding: 32px 36px 36px 36px;
+  }
+}
+@media (min-width: 1280px) {
+  .gallery__title {
+    padding: 32px 160px 36px 160px;
+    font-family: AvenirNextLTPro-Demi;
+    font-size: 36px;
+    line-height: 44px;
+    font-weight: 700;
+    color: #323232;
+  }
 }
 .gallery__imgcontainer {
   display: flex;
@@ -206,11 +326,17 @@ a {
 @media (min-width: 768px) {
   .gallery__imgcontainer {
     flex-direction: row;
+    justify-content: space-between;
+    padding: 0 36px 0 36px;
+    height: 580px;
   }
 }
 @media (min-width: 1280px) {
   .gallery__imgcontainer {
     flex-direction: row;
+    justify-content: space-between;
+    padding: 0 160px 0 160px;
+    height: 800px;
   }
 }
 .gallery__img {
@@ -222,14 +348,15 @@ a {
 }
 @media (min-width: 768px) {
   .gallery__img {
-    width: 15rem;
+    width: 13rem;
     height: 10rem;
+    padding: 0;
   }
 }
 @media (min-width: 1280px) {
   .gallery__img {
-    width: 15rem;
-    height: 10rem;
+    width: 24rem;
+    height: 15rem;
   }
 }
 
