--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -6,6 +6,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 a{
   text-decoration: none;
@@ -14,50 +15,48 @@ a{
     font-family: AvenirNextLTPro-Demi;
     background-color:$bandsite-black;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items:center;
-    flex-wrap: wrap;
-    // padding: 1rem;
     height:6rem;
-    width: 100vw;
     font-size: 16px;
     line-height: 16px;
 
     @include tablet{
+      flex-direction: row;
       justify-content: flex-start;
       padding-left:36px;
       padding-right:36px;
       gap:3rem;
     }
     @include desktop{
-      padding-left: 160px;
+      padding-left: 80px;
     }
    
     &__nav{
       display: flex;
       justify-content: flex-start;
-      padding-bottom:2rem;
 
       @include tablet{
         height:95%;
         padding: 1px;
       }
-      // @include desktop{
-      //   // padding: 1rem;
-      // }
+    }
+    &__logo{
+      align-self: center;
+      @include desktop{
+        padding-left: 36px;
+        // padding-right: 16px;
       }
-
+    }
     &__list{
-      width: inherit;
-      height: inherit;
+      width:320px;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      gap:5rem;
-
+    
       @include tablet{
-        gap:3rem;
+        // width:0;
       }
       @include desktop{
         gap:1.5rem;
@@ -65,29 +64,44 @@ a{
     }
 
     &__item{
-      
       list-style: none;
       color:$white;
-
-    }
-    &__link{
-      font-family: AvenirNextLTPro-Bold;
-      color:$mercury;
-      padding: 8px;
-
+      height:2rem;
+      width:100%;
+      text-align: center;
+      
       &:hover{
         color: $white;
-
+        border-bottom: 4px solid $white;
       }
+
       &:active{
         color:$white;
         font-weight: bold;
         border-bottom: 4px solid $white;
       }
+      @include tablet{
+        height:5.5rem;
+        align-content: center;
+      }
+      @include desktop{
 
+      }
     }
-    
+
+    &__link{
+      font-family: AvenirNextLTPro-Bold;
+      color:$mercury;
+      margin-bottom:1rem;
+      margin-top:1rem;
+
+      @include desktop{
+        margin-right: 36px;
+        margin-left: 36px;
+     
     }
+  }
+}
 
 .hero{
   position:relative;
@@ -141,13 +155,44 @@ a{
       line-height: 32px;
       font-weight: 700;
       color:$bandsite-black;
+      width:100%;
+
+       @include tablet{
+       padding:48px 36px 36px 36px;
+       font-family: AvenirNextLTPro-Bold ;
+       font-size: 36px;
+       line-height: 44px;
+       font-weight: 700;
+       color:$bandsite-black;
+      }
+      @include desktop{
+       padding:48px 160px 36px 160px;
+       font-family: AvenirNextLTPro-Bold ;
+       font-size: 36px;
+       line-height: 44px;
+       font-weight: 700;
+       color:$bandsite-black;
+      }
     }
     &__img{
-      padding-left: 16px;
-      padding-right: 16px;
-      padding-bottom: 16px;
+      padding:0 16px 16px 16px;
       width:100%;
       height:12rem;
+
+     @include tablet{
+        display: flex;
+        padding: 0 80px 36px 80px;
+        width:95%;
+        height:400px;
+        margin:0 auto;
+      }
+      @include desktop{
+        display: flex;
+        padding: 0 80px 36px 80px;
+        margin:0 auto;
+        width:80%;
+        height:580px;
+      }
     }
     &__para{
       padding-left: 16px;
@@ -159,6 +204,55 @@ a{
       line-height: 20px;
       font-style: bold;
       color:$bandsite-black;
+      display: flex;
+
+      @include tablet{
+        display: flex;
+        margin:0 auto;
+        padding: 0 80px 0 80px;
+        font-family:AvenirNextLTPro-Demi ;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 32px;
+        font-style: bold;
+        color:$bandsite-black;
+        width:95%;
+      }
+      @include desktop{
+        display: flex;
+        margin:0 auto;
+        padding: 0 80px 0 80px;
+        font-family:AvenirNextLTPro-Demi ;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 32px;
+        color:$bandsite-black;
+        width:80%;
+      }
+    }
+    &__para--modified{
+      @include tablet{
+        display: flex;
+        margin:0 auto;
+        padding: 16px 80px 36px 80px;
+        width:95%;
+        font-family:AvenirNextLTPro-Demi ;
+        font-size: 19px;
+        font-weight: 600;
+        line-height: 22px;
+        color:$bandsite-black;
+      }
+      @include desktop{
+        display: flex;
+        margin:0 auto;
+        padding: 16px 80px 36px 80px;
+        width:80%;
+        font-family:AvenirNextLTPro-Demi ;
+        font-size: 19px;
+        font-weight: 600;
+        line-height: 22px;
+        color:$bandsite-black;
+      }
     }
 }
 .beesarticle{
@@ -182,14 +276,26 @@ a{
 .gallery{
     background-color: $alabaster;
 
-  @include tablet{
-    padding-left:36px;
-  }  
-
   &__title{
     font-family:  AvenirNextLTPro-Bold ;
     font-weight: 700;
     padding: 8px 16px 16px 16px;
+    color:$bandsite-black;
+
+    @include tablet{
+      font-family:  AvenirNextLTPro-Bold ;
+      padding: 32px 36px 36px 36px;
+      
+    }
+    @include desktop{
+      padding: 32px 160px 36px 160px;
+      font-family: AvenirNextLTPro-Demi ;
+      font-size: 36px;
+      line-height: 44px;
+      font-weight: 700;
+      color:$bandsite-black;
+    }
+    
   }
   &__imgcontainer{
     display: flex;
@@ -197,11 +303,18 @@ a{
     justify-content: center;
     flex-wrap: wrap;
 
+
     @include tablet{
       flex-direction: row;
+      justify-content: space-between;
+      padding: 0 36px 0 36px;
+      height: 580px;  
     }
     @include desktop{
       flex-direction: row;
+      justify-content: space-between;
+      padding: 0 160px 0 160px;
+      height: 800px;  
     }
   }
   &__img{
@@ -212,16 +325,16 @@ a{
     padding-bottom: 1rem;
 
     @include tablet{
-      width: 15rem;
+
+      width: 13rem;
       height: 10rem;
+      padding:0;     
       
     }
     @include desktop{
-      width: 15rem;
-      height: 10rem;
-      
+      width: 24rem;
+      height: 15rem; 
     }
-
   }
 }
 
