--- a/styles/bio.css
+++ b/styles/bio.css
@@ -29,21 +29,21 @@ a {
   justify-content: center;
   align-items: center;
   height: 6rem;
-  font-size: 16px;
-  line-height: 16px;
+  font-size: 1rem;
+  line-height: 1rem;
 }
 @media (min-width: 768px) {
   .header {
     flex-direction: row;
     justify-content: flex-start;
-    padding-left: 36px;
-    padding-right: 36px;
+    padding-left: 2.25rem;
+    padding-right: 2.25rem;
     gap: 3rem;
   }
 }
 @media (min-width: 1280px) {
   .header {
-    padding-left: 80px;
+    padding-left: 5rem;
   }
 }
 .header__nav {
@@ -53,7 +53,6 @@ a {
 @media (min-width: 768px) {
   .header__nav {
     height: 95%;
-    padding: 1px;
   }
 }
 .header__logo {
@@ -61,7 +60,7 @@ a {
 }
 @media (min-width: 1280px) {
   .header__logo {
-    padding-left: 36px;
+    padding-left: 2.25rem;
   }
 }
 .header__list {
@@ -105,8 +104,8 @@ a {
 }
 @media (min-width: 1280px) {
   .header__link {
-    margin-right: 36px;
-    margin-left: 36px;
+    margin-right: 2.25rem;
+    margin-left: 2.25rem;
   }
 }
 
@@ -141,7 +140,7 @@ a {
   z-index: 1;
   font-family: AvenirNextLTPro-Bold;
   color: #FFFFFF;
-  padding: 16px;
+  padding: 1rem;
   font-weight: 700;
 }
 @media (min-width: 768px) {
@@ -158,9 +157,9 @@ a {
 }
 
 .about__title {
-  padding: 24px 16px 16px 16px;
+  padding: 1.5rem 1rem 1rem 1rem;
   font-family: AvenirNextLTPro-Bold;
-  font-size: 24px;
+  font-size: 1.5rem;
   line-height: 32px;
   font-weight: 700;
   color: #323232;
@@ -276,20 +275,82 @@ a {
 }
 
 .beesarticle__title {
-  font-family: AvenirNextLTPro-Demi;
+  font-family: "AvenirNextLTPro-Demi";
   font-size: 14px;
-  line-height: 22px;
   font-weight: 600;
+  line-height: 22px;
   color: #323232;
   padding: 16px;
 }
+@media (min-width: 768px) {
+  .beesarticle__title {
+    font-family: "AvenirNextLTPro-Demi";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    color: #323232;
+    padding: 0 36px;
+    width: 84%;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 1280px) {
+  .beesarticle__title {
+    font-family: "AvenirNextLTPro-Demi";
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 32px;
+    color: #323232;
+    padding: 0 10rem;
+    width: 92%;
+    margin: 0 auto;
+  }
+}
+.beesarticle__paracontainer {
+  display: flex;
+  flex-direction: column;
+}
+@media (min-width: 768px) {
+  .beesarticle__paracontainer {
+    flex-direction: row;
+    padding: 36px 101px 12px 101px;
+    gap: 2rem;
+  }
+}
+@media (min-width: 1280px) {
+  .beesarticle__paracontainer {
+    flex-direction: row;
+    padding: 0 10rem;
+    width: 80%;
+  }
+}
 .beesarticle__para {
-  font-family: AvenirNextLTPro-Regular;
-  font-weight: 400;
+  font-family: "AvenirNextLTPro-Regular";
   font-size: 13px;
+  font-weight: 400;
   line-height: 18px;
-  padding: 0 16px 16px 16px;
   color: #323232;
+  padding: 0 1rem 1rem 1rem;
+}
+@media (min-width: 768px) {
+  .beesarticle__para {
+    font-family: "AvenirNextLTPro-Regular";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    color: #323232;
+    padding: 0;
+  }
+}
+@media (min-width: 1280px) {
+  .beesarticle__para {
+    font-family: "AvenirNextLTPro-Regular";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px;
+    color: #323232;
+    padding: 0;
+  }
 }
 
 .gallery {
@@ -355,7 +416,7 @@ a {
 }
 @media (min-width: 1280px) {
   .gallery__img {
-    width: 24rem;
+    width: 19rem;
     height: 15rem;
   }
 }
@@ -363,6 +424,8 @@ a {
 .footer {
   background-color: #323232;
   margin-top: 8px;
+  display: flex;
+  flex-direction: column;
 }
 .footer__title {
   padding: 24px 16px 16px 16px;
@@ -419,35 +482,66 @@ a {
 }
 @media (min-width: 768px) {
   .footer__parabold, .footer__para--contact, .footer__para--email {
+    font-family: AvenirNextLTPro-Demi;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    padding: 0 0 36px 0;
   }
 }
 @media (min-width: 1280px) {
   .footer__parabold, .footer__para--contact, .footer__para--email {
+    font-family: AvenirNextLTPro-Demi;
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
+    padding: 0 0 36px 0;
   }
 }
 .footer__para--contact, .footer__para--email {
   font-family: AvenirNextLTPro-Regular;
   padding: 0 16px 0 16px;
 }
+@media (min-width: 768px) {
+  .footer__para--contact, .footer__para--email {
+    padding: 0 36px 0 0;
+  }
+}
+@media (min-width: 1280px) {
+  .footer__para--contact, .footer__para--email {
+    padding: 0 36px 0 0;
+  }
+}
 .footer__para--email {
   padding: 16px;
 }
+@media (min-width: 768px) {
+  .footer__para--email {
+    padding: 36px 36px 36px 0;
+  }
+}
+@media (min-width: 1280px) {
+  .footer__para--email {
+    padding: 16px 16px 16px 0;
+  }
+}
 .footer__logo {
   padding: 16px;
+  width: 120px;
 }
 @media (min-width: 768px) {
   .footer__logo {
+    width: 0;
+    height: 0;
     visibility: hidden;
+    padding: 0;
   }
 }
 @media (min-width: 1280px) {
   .footer__logo {
+    width: 0;
+    height: 0;
+    padding: 0;
     visibility: hidden;
   }
 }
@@ -457,11 +551,16 @@ a {
 @media (min-width: 768px) {
   .footer__logo1 {
     visibility: visible;
+    width: 120px;
+    height: 20px;
   }
 }
 @media (min-width: 1280px) {
   .footer__logo1 {
     visibility: visible;
+    width: 120px;
+    height: 20px;
+    flex-grow: 2;
   }
 }
 .footer__copyright {
@@ -472,16 +571,37 @@ a {
   padding: 16px;
 }
 @media (min-width: 768px) {
+  .footer__copyright {
+    font-family: AvenirNextLTPro-Regular;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+    padding: 0 36px 80px 36px;
+  }
+}
+@media (min-width: 1280px) {
+  .footer__copyright {
+    font-family: AvenirNextLTPro-Regular;
+    font-size: 14px;
+    line-height: 20px;
+    color: #FFFFFF;
+    padding: 0 160px 80px 160px;
+  }
+}
+@media (min-width: 768px) {
   .footer__card1 {
     display: flex;
-    padding: 40px 36px 20px 36px;
+    padding: 40px 36px 36px 36px;
     justify-content: space-between;
+    align-items: center;
   }
 }
 @media (min-width: 1280px) {
   .footer__card1 {
     display: flex;
-    padding: 0 160px 20px 160px;
+    justify-content: flex-start;
+    gap: 2.5rem;
+    padding: 40px 160px 20px 160px;
   }
 }
 @media (min-width: 768px) {
@@ -496,7 +616,7 @@ a {
   .footer__cardcontainer {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     padding: 0 160px 40px 160px;
     gap: 4rem;
   }
